# finmath

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  MANIFEST.in  MARKOV_CHAINS_TODO.md  README.md  pyproject.toml  setup.py  setup_venv.sh  test.py  test_numpy.sh
.github/workflows/: build-and-test.yml  build-wheels.yml  ci.yml
demos/: README.md  simd_performance_demo.py
docs/: API.md  BRANCH_AUDIT.md  FinmathImplementationGuide.md  SIMD_IMPLEMENTATION.md
examples/: api_tour.py
finmath/: __init__.py
finmath_research/: __init__.py  features.py  orderbook.py  pnl.py
include/finmath/: finmath.h
include/finmath/FixedIncome/: bond_pricing.h
include/finmath/GraphAlgos/: bellman_arbitrage.h
include/finmath/Helper/: helper.h  simd_helper.h
include/finmath/InterestAndAnnuities/: annuity.h  cash_flow.h  discount_factor.h  present_future_value.h
include/finmath/MarkovChains/: markov_chain.h
include/finmath/MonteCarlo/: monte_carlo.h
include/finmath/Optimization/: linalg_helpers.h  psgd.h
include/finmath/OptionPricing/: binomial_tree.h  black_scholes.h  options_pricing_types.h
include/finmath/OrderBook/: features.h
include/finmath/Regression/: OLS.h
include/finmath/Risk/: risk_metrics.h
include/finmath/StatisticalModels/: garch.h  pca.h
include/finmath/TimeSeries/: autocorrelation.h  ema.h  ema_simd.h  returns.h  rolling_corr.h  rolling_std_dev.h  rolling_volatility.h  rolling_volatility_simd.h  rolling_zscore.h  rsi.h  rsi_simd.h  simple_moving_average.h  simple_moving_average_simd.h  vwap.h
profiling/: README.md  harness_rolling_volatility.cpp  profile  profile_targets.json  run_gprof.sh  run_llvm_mca.sh  run_perf.sh  run_rolling_volatility_bench.py
scripts/: build.sh  debug.sh  run.sh  test.sh  test_binds
src/: python_bindings.cpp
src/cpp/FixedIncome/: bond_pricing.cpp
src/cpp/GraphAlgos/: .bellman_arbitrage.cpp.swp  bellman_arbitrage.cpp
src/cpp/Helper/: helper.cpp  simd_helper.cpp
src/cpp/InterestAndAnnuities/: annuity.cpp  cash_flow.cpp  compound_interest.cpp  discount_factor.cpp  present_future_value.cpp
src/cpp/MarkovChains/: markov_chain.cpp
src/cpp/MonteCarlo/: monte_carlo.cpp
src/cpp/Optimization/: linalg_helpers.cpp  psgd.cpp
src/cpp/OptionPricing/: binomial_tree.cpp  black_scholes.cpp  docs.md
src/cpp/OrderBook/: features.cpp
src/cpp/Regression/: OLS.cpp
src/cpp/Risk/: risk_metrics.cpp
src/cpp/StatisticalModels/: garch.cpp  pca.cpp
src/cpp/TimeSeries/: autocorrelation.cpp  ema.cpp  ema_simd.cpp  returns.cpp  rolling_corr.cpp  rolling_std_dev.cpp  rolling_volatility.cpp  rolling_volatility_simd.cpp  rolling_zscore.cpp  rsi.cpp  rsi_simd.cpp  simple_moving_average.cpp  simple_moving_average_simd.cpp  vwap.cpp
src/finmath/: __init__.py
test/: test_finmath.cpp  test_runner.cpp  testing.md
test/FixedIncome/: bond_pricing_test.cpp
test/GraphAlgos/: bellman_arbitrage_test.cpp
test/Helper/C++/: simd_helper_test.cpp
test/InterestAndAnnuities/: annuity_test.cpp  cash_flow_test.cpp  discount_factor_test.cpp  present_future_value_test.cpp
test/MarkovChains/C++/: markov_chain_test.cpp
test/Optimization/Python/: test_psgd.py
test/OptionPricing/: binomial_option_pricing_test.cpp  black_scholes_test.cpp
test/StatisticalModels/: garch_test.cpp  pca_test.cpp
test/TimeSeries/: returns_test.cpp  rolling_std_dev_test.cpp  rolling_zscore_test.cpp
test/TimeSeries/EMA/C++/: ema_simd_test.cpp  ema_test.cpp
test/TimeSeries/EMA/Python/: test_ema.py
test/TimeSeries/RSI/C++/: rsi_simd_test.cpp
test/TimeSeries/RSI/Python/: test_rsi.py
test/TimeSeries/RollingVolatility/C++/: rolling_volatility_test.cpp
test/TimeSeries/RollingVolatility/Python/: test_rolling_volatility_np.py
test/TimeSeries/SimpleMovingAverage/C++/: simple_moving_average_simd_test.cpp  simple_moving_average_test.cpp
test/TimeSeries/SimpleMovingAverage/Python/: test_simple_moving_average.py
test/black_scholes/: black_scholes_test.cpp
test/compound_interest/: compound_interest_test.cpp
test/include/: test_common.h
test/rsi/: rsi_test.cpp
tests/: conftest.py  test_analytics_risk.py  test_compound_interest.py  test_option_pricing.py  test_research_helpers.py  test_timeseries.py
