[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "finmath"
version = "0.2.0"
description = "High-performance financial mathematics: options, time series (SIMD), Markov chains, Monte Carlo, and risk metrics (C++/pybind11)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0" }
authors = [{ name = "Boiler-Quant contributors" }]
keywords = ["finance", "quant", "options", "black-scholes", "time-series", "simd"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["finmath*", "finmath_research*"]

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["finmath", "finmath_research"]

[tool.setuptools.package-data]
finmath = ["*.so", "*.pyd", "*.dylib"]
